--- a/DL_Implementation/Instruments_Classification/classi.ipynb
+++ b/DL_Implementation/Instruments_Classification/classi.ipynb
@@ -667,13 +667,12 @@
    "source": [
     "import tensorflow as tf\n",
     "\n",
-    "# Define the Sequential model\n",
     "model = tf.keras.Sequential([\n",
-    "    # First Convolutional layer (replaces the input layer)\n",
+    "\n",
     "    tf.keras.layers.Conv2D(164, (5, 5), activation='relu', input_shape=(264, 264, 1)),\n",
     "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
     "    \n",
-    "    # Additional Convolutional layers\n",
+    "\n",
     "    tf.keras.layers.Conv2D(128, (3, 3), activation='relu'),\n",
     "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
     "    \n",
@@ -684,15 +683,13 @@
     "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
     "\n",
     "\n",
-    "    # Flatten the output of the convolutional layers\n",
     "    tf.keras.layers.Flatten(),\n",
     "\n",
-    "    # Fully connected layers\n",
+    "\n",
     "    tf.keras.layers.Dense(128, activation='relu'),\n",
     "    tf.keras.layers.Dense(64, activation='relu'),\n",
     "    tf.keras.layers.Dense(32, activation='relu'),\n",
-    "    # Output layer (assuming you have 10 classes to predict, adjust if needed)\n",
-    "    tf.keras.layers.Dense(10, activation='softmax')  # Change 10 to the number of classes you have\n",
+    "    tf.keras.layers.Dense(10, activation='softmax') \n",
     "])\n",
     "\n",
     "# Compile the model\n",
